Made tests for `ChemicalEquation.java` and `ElementFactory.java`